<resources>
    <!-- app -->
    <string name="app_name">MainProject</string>

    <!-- general input -->
    <string name="input_full_name">Full Name</string>
    <string name="input_email_hint">Email</string>
    <string name="input_phone_hint">Phone</string>
    <string name="input_password_hint">Password</string>
    <string name="input_confirm_password_hint">Confirm Password</string>
    <string name="input_invalid_email">Email is not valid</string>
    <string name="input_invalid_phone">Phone Number is not valid</string>
    <string name="input_confirm_password_incorrect">Passwords don\'t match</string>
    <string name="input_enter_full_name">Enter your full name</string>
    <string name="input_enter_email">Enter a valid email</string>
    <string name="input_enter_phone">Enter a valid phone number</string>
    <string name="input_enter_password">Enter a password</string>
    <string name="input_enter_confirm_password">Re-enter password</string>

    <!-- login -->
    <string name="login_artwork_description">Login Artwork</string>
    <string name="login_welcome">Welcome back!</string>
    <string name="login_under_welcome_label">Log in to your existing account</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_btn_label">LOG IN</string>
    <string name="login_connect_using_label">Or connect using</string>
    <string name="login_google_label">Google</string>
    <string name="login_facebook_label">Facebook</string>
    <string name="login_has_no_account_label">Don\'t have an account?</string>
    <string name="login_signup_label">Sign Up</string>
    <string name="login_successful">Login successful</string>


    <!-- signup -->
    <string name="signup_back_btn_description">Signup Back Button</string>
    <string name="signup_get_started_label">Let\'s Get Started!</string>
    <string name="signup_under_get_started_label">Create an account to get all features</string>
    <string name="signup_create">Create</string>
    <string name="signup_already_have_account">Already have an account?</string>
    <string name="signup_login_label">Login here</string>
    <string name="signup_user_created">User created</string>
</resources>