<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        android:transitionName="transition_login"
        tools:context=".Login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_artwork"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:src="@drawable/login_artwork"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:contentDescription="@string/login_artwork_description"/>

            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_welcome"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_under_welcome_label"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:layout_marginBottom="32dp"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailWrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_email_hint"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/gray"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/gray"
                    app:hintTextColor="@color/gray"
                    android:layout_marginBottom="6dp"
                    app:startIconDrawable="@drawable/email_filled"
                    app:startIconTint="@color/gray"
                    app:boxCornerRadiusTopStart="@dimen/login_input_corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/login_input_corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/login_input_corner_radius"
                    app:boxCornerRadiusBottomEnd="@dimen/login_input_corner_radius">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordWrapper"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_password_hint"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/gray"
                    app:boxStrokeWidthFocused="2dp"
                    app:hintTextColor="@color/gray"
                    app:startIconDrawable="@drawable/password"
                    app:startIconTint="@color/gray"
                    app:boxCornerRadiusTopStart="@dimen/login_input_corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/login_input_corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/login_input_corner_radius"
                    app:boxCornerRadiusBottomEnd="@dimen/login_input_corner_radius">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txtPassword"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/btnForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_forgot_password"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="4dp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:paddingRight="70dp"
                    android:paddingLeft="70dp"
                    android:layout_gravity="center"
                    android:text="@string/login_btn_label"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:background="@drawable/login_button"
                    android:backgroundTint="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_connect_using_label"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/light_gray"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    >

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnFacebookLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="62dp"
                        android:backgroundTint="@color/facebook_blue"
                        app:icon="@drawable/facebook_rounded"
                        app:iconSize="35dp"
                        android:textStyle="bold"
                        android:layout_marginEnd="4dp"
                        android:text="@string/login_facebook_label"
                        app:iconTint="@color/white"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnGoogleLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="62dp"
                        android:backgroundTint="@color/google_red"
                        android:layout_marginStart="4dp"
                        android:text="@string/login_google_label"
                        android:textStyle="bold"
                        app:icon="@drawable/google_2x"
                        app:iconTint="@color/white"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_has_no_account_label"
                        android:textAlignment="center"
                        android:textColor="@color/gray"
                        android:textSize="18sp"
                        android:layout_marginEnd="8dp"
                        />

                    <TextView
                        android:id="@+id/btnSwitchToSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_signup_label"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>