<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        android:orientation="vertical"
        android:transitionName="transition_signup"
        tools:context=".Signup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/back_to_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_2x"
                android:layout_marginBottom="16dp"
                android:transitionName="transition_back_arrow_btn"
                android:contentDescription="@string/signup_back_btn_description"
                />

            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_get_started_label"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:textSize="40sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_under_get_started_label"
                android:textStyle="normal"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:layout_marginBottom="32dp"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_full_name"
                    android:layout_marginBottom="16dp"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/gray"
                    app:boxStrokeWidthFocused="2dp"
                    android:id="@+id/fullNameWrapper"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/gray"
                    app:hintTextColor="@color/gray"
                    app:startIconDrawable="@drawable/person"
                    app:startIconTint="@color/gray"
                    app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
                    app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txtFullName"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_email_hint"
                    android:layout_marginBottom="16dp"
                    android:id="@+id/emailWrapper"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/gray"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/gray"
                    app:hintTextColor="@color/gray"
                    app:startIconDrawable="@drawable/email_filled"
                    app:startIconTint="@color/gray"
                    app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
                    app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txtEmail"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_phone_hint"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/gray"
                    android:layout_marginBottom="16dp"
                    app:boxStrokeWidthFocused="2dp"
                    android:id="@+id/phoneWrapper"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/gray"
                    app:hintTextColor="@color/gray"
                    app:startIconDrawable="@drawable/mobile"
                    app:startIconTint="@color/gray"
                    app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
                    app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txtPhone"
                        android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_password_hint"
                    android:layout_marginBottom="16dp"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/gray"
                    app:boxStrokeWidthFocused="2dp"
                    android:id="@+id/passwordWrapper"
                    app:hintTextColor="@color/gray"
                    app:startIconDrawable="@drawable/password"
                    app:startIconTint="@color/gray"
                    app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
                    app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txtPassword"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_confirm_password_hint"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/gray"
                    app:boxStrokeWidthFocused="2dp"
                    android:id="@+id/confirmPasswordWrapper"
                    app:hintTextColor="@color/gray"
                    app:startIconDrawable="@drawable/password"
                    app:startIconTint="@color/gray"
                    app:boxCornerRadiusTopStart="@dimen/input_corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/input_corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/input_corner_radius"
                    app:boxCornerRadiusBottomEnd="@dimen/input_corner_radius"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txtConfirmPassword"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="200dp"
                    android:layout_height="62dp"
                    android:text="@string/signup_create"
                    android:id="@+id/btnSignupCreate"
                    android:textAllCaps="false"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/login_button"
                    android:backgroundTint="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_already_have_account"
                        android:textAlignment="center"
                        android:textColor="@color/gray"
                        android:layout_marginEnd="6dp"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_login_label"
                        android:id="@+id/btnSwitchToLogin"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
